Correct alignment properties in .bio class
Fix alignment properties and correct text alignment in .bio class.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .bio {
-text-algin: center;
-width: 500px;
+	align-content: left;
+  	align-items: center;
+	align-text: center;
+	margin: 0 auto;
+	width: 500px;
 }
 
 .teaching {
